<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phone Dialer</string>
    <string name="action_settings">Settings</string>
    <string name="imageButton1">Back Button</string>
    <string name="imageButton2">Dial Button</string>
    <string name="imageButton3">Hang up Button</string>
    <string name="imageButton4">Contacts Button</string>
    <string name="Button0">0</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="ButtonStar">*</string>
    <string name="ButtonDiez">#</string>
    <string name="phone_error">Phone Number Error</string>

</resources>
