<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.lab03.phonedialer.PhoneDialerActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="6"
        android:layout_gravity="center" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_column="2"
            android:layout_row="0"
            android:src="@drawable/backspace"
            android:contentDescription="@string/imageButton1" />
        
        <Button
            android:id="@+id/Button1"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/Button1" />
        
        <Button
            android:id="@+id/Button2"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/Button2" />
        
        <Button
            android:id="@+id/Button3"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/Button3" />
        
        <Button
            android:id="@+id/Button4"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/Button4" />
        
        <Button
            android:id="@+id/Button5"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/Button5" />
        
        <Button
            android:id="@+id/Button6"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/Button6" />
        
        <Button
            android:id="@+id/Button7"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/Button7" />
        
        <Button
            android:id="@+id/Button8"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/Button8" />
        
        <Button
            android:id="@+id/Button9"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/Button9" />
        
        <Button
            android:id="@+id/ButtonStar"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/ButtonStar" />
        
        <Button
            android:id="@+id/Button0"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/Button0" />
        
        <Button
            android:id="@+id/ButtonDiez"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/ButtonDiez" />
        
         <ImageButton
            android:id="@+id/imageButton2"
            android:layout_column="0"
            android:layout_row="5"
            android:src="@drawable/call"
            android:contentDescription="@string/imageButton2" />
         
          <ImageButton
            android:id="@+id/imageButton3"
            android:layout_column="2"
            android:layout_row="5"
            android:src="@drawable/hangup"
            android:contentDescription="@string/imageButton3" />

    </GridLayout>

</LinearLayout>